---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:test\nfrom [{\n  x=0\n}]\nderive {\n  a = 10 - (10 - 2),\n  b = 10 - (10 + 2),\n  c = 10 / (10 / 2),\n  d = 10 / (10 * 2),\n}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/basic_operations.prql
---
WITH table_0 AS (
  SELECT
    0 AS x
)
SELECT
  x,
  10 - (10 - 2) AS a,
  10 - (10 + 2) AS b,
  10 / (10 / 2) AS c,
  10 / (10 * 2) AS d
FROM
  table_0

